welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: '<-' expected but integer literal found.
	for (i- > 0 to num.length-2){
                  ^island:8: error: illegal start of simple expression
}
^